--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ant-design-vue": "^1.7.8",
     "axios": "^0.24.0",
+    "dayjs": "^1.11.3",
     "qs": "^6.10.1",
     "vue": "^2.5.2",
     "vue-axios": "^3.3.7",
