--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "ant-design-vue": "^1.7.8",
     "axios": "^0.24.0",
     "dayjs": "^1.11.3",
+    "highlight.js": "^11.5.1",
     "qs": "^6.10.1",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-axios": "^3.3.7",
+    "vue-highlightjs": "^1.3.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -30,11 +33,12 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^3.13.1",
     "less-loader": "^5.0.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -46,6 +50,8 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^3.3.1",
+    "stylus": "^0.58.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
